# beaapi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.note  README.md  SUPPORT.md  classifiers.txt  conda-user.txt  pyproject.toml  requirements.txt  setup.cfg
beaapi/: __init__.py  api_request.py  get_data.py  get_data_set_list.py  response_to_dict.py  response_to_table.py  search_metadata.py  throttling_caller.py
docs/: .buildinfo  README.html  README.ipynb  api.html  citations.html  example_tables.html  example_tables.ipynb  genindex.html  iTables_MNE.html  iTables_to_api.html  iTables_to_api.ipynb  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  table_concordance.html  table_concordance.ipynb
docs/.doctrees/: README.doctree  api.doctree  citations.doctree  environment.pickle  example_tables.doctree  iTables_MNE.doctree  iTables_to_api.doctree  index.doctree  table_concordance.doctree
docs/.doctrees/nbsphinx/: citations.ipynb  iTables_MNE.ipynb
docs/_sources/: README.ipynb.txt  api.rst.txt  citations.ipynb.txt  iTables_MNE.ipynb.txt  iTables_to_api.ipynb.txt  index.rst.txt
docsrc/: Project-Charter-beaapi.docx  README.ipynb  TA_MNE_series_list.csv  conf.py  iTables_to_api.ipynb  index.rst  make.bat
src/: setup.py
src/beaapi/: __init__.py  api_request.py  beaapi_error.py  get_data.py  get_parameter_list.py  get_parameter_values.py  get_parameter_values_filtered.py  get_row_data_value.py  response_to_dict.py  response_to_table.py  search_metadata.py  throttling_caller.py  update_metadata.py
tests/: MNE Code issue.ipynb  api_error.ipynb  metadata.ipynb  pull_all.ipynb  reshaping.ipynb  test_errors.py  test_main.py  test_throttling.py  throttling.py
