[metadata]
name = beaapi
version = 0.0.2
author = Andrea Batch, Brian Quistorff
author_email = developers@bea.gov
description = BEA API Python package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/us-bea/base-bea-api
project_urls =
    Bug Tracker = https://github.com/us-bea/base-bea-api/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    License :: Public Domain

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    pandas>=1.5
#    fuzzywuzzy

# https://setuptools.pypa.io/en/latest/userguide/dependency_management.html#optional-dependencies
[options.extras_require]
dev =
    build
    setuptools
    wheel
    jupyter
    python-dotenv
    nbconvert
    sphinx
    nbsphinx
    pandoc
    unittest
    flake8
    mypy

[options.packages.find]
where = src

[options.package_data]
* = py.typed

[flake8]
ignore = 
    #W503 - newline after binary op (but there's also there reverse for W504)
    W503

max-line-length = 88
extend-ignore = E203
